--- a/Stocks_portfolio/USA_markets.ipynb
+++ b/Stocks_portfolio/USA_markets.ipynb
@@ -5935,11 +5935,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "19cf73bca1c47d5e5232cb4ff5d6a583e1ddf8b124c4f222aee1ad0765d6a2ec"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -5955,7 +5952,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "c219ef5cc60cb1fe992d92d78fdbfe860a3f25886d77e6b32be4ebf606a655a4"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
