--- a/Games_features/games_EDA.ipynb
+++ b/Games_features/games_EDA.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,6 +181,28 @@
        "      <td>False</td>\n",
        "      <td>4.99</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ricochet</td>\n",
+       "      <td>Nov 1 2000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.99</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -192,6 +214,7 @@
        "2              Day of Defeat  May 1 2003          79                 2319   \n",
        "3         Deathmatch Classic  Jun 1 2001           0                  888   \n",
        "4  Half-Life: Opposing Force  Nov 1 1999           0                 2934   \n",
+       "5                   Ricochet  Nov 1 2000           0                 1965   \n",
        "\n",
        "   IsFree  GenreIsNonGame  GenreIsIndie  GenreIsAction  GenreIsAdventure  \\\n",
        "0   False           False         False           True             False   \n",
@@ -199,6 +222,7 @@
        "2   False           False         False           True             False   \n",
        "3   False           False         False           True             False   \n",
        "4   False           False         False           True             False   \n",
+       "5   False           False         False           True             False   \n",
        "\n",
        "   GenreIsCasual  GenreIsStrategy  GenreIsRPG  GenreIsSimulation  \\\n",
        "0          False            False       False              False   \n",
@@ -206,6 +230,7 @@
        "2          False            False       False              False   \n",
        "3          False            False       False              False   \n",
        "4          False            False       False              False   \n",
+       "5          False            False       False              False   \n",
        "\n",
        "   GenreIsEarlyAccess  GenreIsFreeToPlay  GenreIsSports  GenreIsRacing  \\\n",
        "0               False              False          False          False   \n",
@@ -213,23 +238,25 @@
        "2               False              False          False          False   \n",
        "3               False              False          False          False   \n",
        "4               False              False          False          False   \n",
+       "5               False              False          False          False   \n",
        "\n",
        "   GenreIsMassivelyMultiplayer  PriceInitial  \n",
        "0                        False          9.99  \n",
        "1                        False          4.99  \n",
        "2                        False          4.99  \n",
        "3                        False          4.99  \n",
-       "4                        False          4.99  "
+       "4                        False          4.99  \n",
+       "5                        False          4.99  "
       ]
      },
-     "execution_count": 234,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('./games-features-edit.csv') #reading the file in the same folder\n",
-    "df.head(5) #see what contains the file"
+    "df.head(6) #see what contains the file"
    ]
   },
   {
