--- a/Stocks_portfolio/Portfolio_optimization.ipynb
+++ b/Stocks_portfolio/Portfolio_optimization.ipynb
@@ -19,16 +19,96 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'returnOnEquity'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3552/1825135662.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"__main__\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m     \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3552/1825135662.py\u001b[0m in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mstocklist\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m         \u001b[0mRoE\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"__main__\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3552/1825135662.py\u001b[0m in \u001b[0;36mRoE\u001b[1;34m(ticker)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mRoE\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0myf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTicker\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mroe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'returnOnEquity'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#roe\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'shortName'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#company name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[0msymbol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'symbol'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#symbol\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'returnOnEquity'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "3M Company : 0.38752997\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "American Express Company : 0.32051\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Amgen Inc. : 1.26474\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Apple Inc. : 1.47943\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Boeing Company (The) : None\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Caterpillar, Inc. : 0.41374\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Chevron Corporation : 0.23773001\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Cisco Systems, Inc. : 0.27725\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Coca-Cola Company (The) : None\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Dow Inc. : 0.23208\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Goldman Sachs Group, Inc. (The) : 0.09887999\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Home Depot, Inc. (The) : 14.65495\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Honeywell International Inc. : 0.27161\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Intel Corporation : 0.080699995\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "International Business Machines : 0.086890005\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Johnson & Johnson : 0.24143\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "JP Morgan Chase & Co. : 0.12849\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "McDonald's Corporation : None\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Merck & Company, Inc. : 0.35095\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Microsoft Corporation : 0.39312\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Nike, Inc. : 0.37316\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Procter & Gamble Company (The) : 0.32018003\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Salesforce, Inc. : 0.00478\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "The Travelers Companies, Inc. : 0.112670004\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "UnitedHealth Group Incorporated : 0.25351\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Verizon Communications Inc. : 0.24761\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Visa Inc. : 0.41514\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Walmart Inc. : 0.106529996\n",
+      "WARNING: No decryption keys could be extracted from JS file. Falling back to backup decrypt methods.\n",
+      "Symbol removed from info (key='symbol'). You know this already\n",
+      "Walt Disney Company (The) : 0.03496\n"
      ]
     }
    ],
@@ -66,31 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  5 of 5 completed\n"
+     "ename": "TypeError",
+     "evalue": "expected string or bytes-like object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_30676\\3050953366.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mweights\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0.2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m#percentage of the components in portfolio\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mhistorical_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0myf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstocks\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'2018-01-01'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#download data from date selected\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mclose_price\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhistorical_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Close'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpct_change\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#percentage of return between open price and close price\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\yfinance\\multi.py\u001b[0m in \u001b[0;36mdownload\u001b[1;34m(tickers, start, end, actions, threads, ignore_tz, group_by, auto_adjust, back_adjust, repair, keepna, progress, period, show_errors, interval, prepost, proxy, rounding, timeout)\u001b[0m\n\u001b[0;32m     97\u001b[0m     \u001b[0m_tickers_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     98\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mticker\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtickers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 99\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_isin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    100\u001b[0m             \u001b[0misin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mticker\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m             \u001b[0mticker\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_ticker_by_isin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mproxy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\yfinance\\utils.py\u001b[0m in \u001b[0;36mis_isin\u001b[1;34m(string)\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mis_isin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mbool\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_re\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"^([A-Z]{2})([A-Z0-9]{9})([0-9]{1})$\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\re.py\u001b[0m in \u001b[0;36mmatch\u001b[1;34m(pattern, string, flags)\u001b[0m\n\u001b[0;32m    189\u001b[0m     \"\"\"Try to apply the pattern at the start of the string, returning\n\u001b[0;32m    190\u001b[0m     a Match object, or None if no match was found.\"\"\"\n\u001b[1;32m--> 191\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    192\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    193\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfullmatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: expected string or bytes-like object"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Date\n",
-       "2018-01-02    1.000000\n",
-       "2018-01-03    1.004586\n",
-       "2018-01-04    1.006914\n",
-       "2018-01-05    1.021177\n",
-       "2018-01-08    1.020599\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -370,7 +441,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -384,12 +455,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c219ef5cc60cb1fe992d92d78fdbfe860a3f25886d77e6b32be4ebf606a655a4"
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
    }
   }
  },
