--- a/Data_Prueba_Tecnica_product_manager/ETL.ipynb
+++ b/Data_Prueba_Tecnica_product_manager/ETL.ipynb
@@ -39,7 +39,7 @@
     "    df = pd.read_csv(ruta, sep=\"\\t\", header=None, names=range(5), encoding='latin1') # Leer el archivo CSV sin el header\n",
     "    df['Archivo'] = banco\n",
     "    df['Banco'] = df.iloc[0,0]\n",
-    "    df = df.iloc[1:, :]\n",
+    "    df = df.iloc[1:, :] # Eliminar la primera fila\n",
     "\n",
     "    dfs[banco] = df # Agregar el dataframe al diccionario\n",
     "\n",
