--- a/Data_Prueba_Tecnica_product_manager/ETL.ipynb
+++ b/Data_Prueba_Tecnica_product_manager/ETL.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import re"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +151,7 @@
        "4    0000000000000,00  b1202304001  001 BANCO DE CHILE  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +350,7 @@
        "9    0000000000000,00  BANCO DE CHILE  2023-04  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
