--- a/Data_Prueba_Tecnica_project_manager/ETL.ipynb
+++ b/Data_Prueba_Tecnica_project_manager/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,8 +136,8 @@
        "</div>"
       ],
       "text/plain": [
-       "  Cuenta_contable         Saldo_CLP          Saldo_UF       Saldo_USD   \n",
-       "0     100000000.0  28444728250232.0  20128453882100.0  117300798857.0  \\\n",
+       "  Cuenta_contable         Saldo_CLP          Saldo_UF       Saldo_USD  \\\n",
+       "0     100000000.0  28444728250232.0  20128453882100.0  117300798857.0   \n",
        "1     105000000.0   1059628254454.0               0.0             0.0   \n",
        "2     105000100.0    823187780235.0               0.0             0.0   \n",
        "3     105000101.0    192860234135.0               0.0             0.0   \n",
@@ -151,7 +151,7 @@
        "4    0000000000000,00  b1202304001  001 BANCO DE CHILE  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -325,8 +325,8 @@
        "</div>"
       ],
       "text/plain": [
-       "  Cuenta_contable         Saldo_CLP          Saldo_UF       Saldo_USD   \n",
-       "0     100000000.0  28444728250232.0  20128453882100.0  117300798857.0  \\\n",
+       "  Cuenta_contable         Saldo_CLP          Saldo_UF       Saldo_USD  \\\n",
+       "0     100000000.0  28444728250232.0  20128453882100.0  117300798857.0   \n",
        "1     105000000.0   1059628254454.0               0.0             0.0   \n",
        "2     105000100.0    823187780235.0               0.0             0.0   \n",
        "3     105000101.0    192860234135.0               0.0             0.0   \n",
@@ -350,7 +350,7 @@
        "9    0000000000000,00  BANCO DE CHILE  2023-04  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
